--- a/clone-messenger/public/index.html
+++ b/clone-messenger/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="public/messenger.ico" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/public/favicon.ico" /> -->
+    <!-- <link rel="icon" href="/public/messenger1.ico" /> -->
+    <link rel="icon" href="/public/messenger.ico" /> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
